# dlib

./: CMakeLists.txt
dlib/: CMakeLists.txt
dlib/cmake_utils/: cmake_find_blas.txt  dlibConfig.cmake.in  find_blas.cmake
dlib/cmake_utils/test_for_cuda/: CMakeLists.txt
dlib/cmake_utils/test_for_cudnn/: CMakeLists.txt
dlib/dnn/: layers.h  layers_abstract.h  loss.h
dlib/test/: dnn.cpp
